// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`psql.sql > line 142 1`] = `
[
  "rollback",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql.sql > line 197 1`] = `
[
  "execute q",
  {
    "stmts": [
      {
        "stmt": {
          "ExecuteStmt": {
            "name": "q",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql.sql > line 300 1`] = `
[
  "deallocate q",
  {
    "stmts": [
      {
        "stmt": {
          "DeallocateStmt": {
            "name": "q",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql.sql > line 303 1`] = `
[
  "prepare q as select repeat('x',2*n) as "0123456789abcdef", repeat('y',20-2*n) as "0123456789" from generate_series(1,10) as n",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "q",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "n",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 115,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 117,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 99,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 20,
                      "name": "0123456789abcdef",
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 27,
                                "sval": {
                                  "sval": "x",
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 2,
                                    },
                                    "location": 31,
                                  },
                                },
                                "location": 32,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "*",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "n",
                                        },
                                      },
                                    ],
                                    "location": 33,
                                  },
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 59,
                      "name": "0123456789",
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 66,
                                "sval": {
                                  "sval": "y",
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 20,
                                    },
                                    "location": 70,
                                  },
                                },
                                "location": 72,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "-",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 2,
                                        },
                                        "location": 73,
                                      },
                                    },
                                    "location": 74,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "*",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "n",
                                            },
                                          },
                                        ],
                                        "location": 75,
                                      },
                                    },
                                  },
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 59,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql.sql > line 505 1`] = `
[
  "CREATE TABLE tbl_heap_psql(f1 int, f2 char(100)) using heap_psql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "accessMethod": "heap_psql",
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tbl_heap_psql",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 27,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f2",
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bpchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 100,
                          },
                          "location": 43,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql.sql > line 614 1`] = `
[
  "select 'comma,comma' as comma, 'semi;semi' as semi",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "comma",
                  "val": {
                    "A_Const": {
                      "location": 7,
                      "sval": {
                        "sval": "comma,comma",
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "name": "semi",
                  "val": {
                    "A_Const": {
                      "location": 31,
                      "sval": {
                        "sval": "semi;semi",
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
